[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.12.2"
teloxide-macros = "0.7.1"
tokio = { version = "1.8", features = ["full"] }
pretty_env_logger = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8.14"
